# qubes-core-admin-client

./: .gitignore  .gitlab-ci.yml  .pylintrc  .qubesbuilder  .readthedocs.yaml  .travis.yml  Dockerfile.run_tests  Makefile  Makefile.builder  README.md  pyproject.toml  run-tests  setup.py  version
archlinux/: PKGBUILD.in
ci/: codecov-wrapper  coveragerc  pylintrc  requirements.txt
debian/: changelog  control  copyright  qubes-core-admin-client.install  rules
doc/: Makefile  conf.py  index.rst  modules.rst  qubesadmin.backup.rst  qubesadmin.events.rst  qubesadmin.rst  qubesadmin.tests.backup.rst  qubesadmin.tests.rst  qubesadmin.tests.tools.rst  qubesadmin.tests.vm.rst  qubesadmin.tools.rst  qubesadmin.vm.rst  skel-manpage.py
doc/manpages/: qubes-prefs.rst  qvm-backup-restore.rst  qvm-backup.rst  qvm-check.rst  qvm-clone.rst  qvm-create.rst  qvm-device.rst  qvm-features.rst  qvm-firewall.rst  qvm-kill.rst  qvm-ls.rst  qvm-notes.rst  qvm-pause.rst  qvm-pool.rst  qvm-prefs.rst  qvm-remove.rst  qvm-restart.rst  qvm-run.rst  qvm-service.rst  qvm-shutdown.rst  qvm-start-daemon.rst  qvm-start-gui.rst  qvm-start.rst  qvm-tags.rst  qvm-template.rst  qvm-top.rst  qvm-unpause.rst  qvm-volume.rst
etc/: qvm-start-daemon-kde.desktop  qvm-start-daemon.desktop  qvm-start-gui.desktop  sys-gui.desktop
qubesadmin/: __init__.py  app.py  base.py  config.py  device_protocol.py  devices.py  exc.py  features.py  firewall.py  label.py  log.py  qubesadmin  spinner.py  storage.py  tags.py  templates.py  utils.py
qubesadmin/backup/: __init__.py  core2.py  core3.py  dispvm.py  restore.py
qubesadmin/events/: __init__.py  utils.py
qubesadmin/tests/: __init__.py  app.py  devices.py  errors.py  events.py  features.py  firewall.py  label.py  mock_app.py  storage.py  tags.py  utils.py
qubesadmin/tests/backup/: __init__.py  backupcompatibility.py  dispvm.py  v3-firewall.xml  v3-qubes.xml  v4-firewall.xml  v4-qubes.xml
qubesadmin/tests/tools/: __init__.py  init.py  qubes_prefs.py  qvm_backup.py  qvm_backup_restore.py  qvm_check.py  qvm_clone.py  qvm_create.py  qvm_device.py  qvm_features.py  qvm_firewall.py  qvm_kill.py  qvm_ls.py  qvm_notes.py  qvm_pause.py  qvm_pool.py  qvm_pool_legacy.py  qvm_prefs.py  qvm_remove.py  qvm_restart.py  qvm_run.py  qvm_service.py  qvm_set_wallpaper.py  qvm_shutdown.py  qvm_start.py  qvm_start_daemon.py  qvm_start_gui.py  qvm_tags.py  qvm_template.py  qvm_template_postprocess.py  qvm_unpause.py  qvm_volume.py
qubesadmin/tests/vm/: __init__.py  actions.py  dispvm.py  properties.py  storage.py
qubesadmin/toolparsers/: __init__.py  qubes_prefs.py  qvm_backup.py  qvm_backup_restore.py  qvm_check.py  qvm_clone.py  qvm_create.py  qvm_features.py  qvm_prefs.py  qvm_run.py
qubesadmin/tools/: .qvm_template.py.swp  __init__.py  dochelpers.py  qubes_prefs.py  qvm_backup.py  qvm_backup_restore.py  qvm_check.py  qvm_clone.py  qvm_create.py  qvm_device.py  qvm_features.py  qvm_firewall.py  qvm_kill.py  qvm_ls.py  qvm_notes.py  qvm_pause.py  qvm_pool.py  qvm_pool_legacy.py  qvm_prefs.py  qvm_remove.py  qvm_restart.py  qvm_run.py  qvm_service.py  qvm_set_wallpaper.py  qvm_shutdown.py  qvm_start.py  qvm_start_daemon.py  qvm_start_gui.py  qvm_tags.py  qvm_template.py  qvm_template_postprocess.py  qvm_top.py  qvm_unpause.py  qvm_volume.py  xcffibhelpers.py
qubesadmin/utils/: __init__.py
qubesadmin/vm/: __init__.py
qubesmgmt/: __init__.py  app.py  base.py  config.py  exc.py  features.py  firewall.py  label.py  log.py  storage.py  utils.py
qubesmgmt/events/: __init__.py
qubesmgmt/tests/: __init__.py  app.py  devices.py  errors.py  events.py  firewall.py  storage.py
qubesmgmt/tests/tools/: __init__.py  init.py  label.py  qubes_prefs.py  qvm_check.py  qvm_clone.py  qvm_create.py  qvm_device.py  qvm_features.py  qvm_firewall.py  qvm_kill.py  qvm_ls.py  qvm_pause.py  qvm_pool.py  qvm_prefs.py  qvm_remove.py  qvm_run.py  qvm_shutdown.py  qvm_start.py  qvm_start_gui.py  qvm_unpause.py  qvm_volume.py
qubesmgmt/tests/vm/: __init__.py  actions.py  properties.py  storage.py
qubesmgmt/tools/: __init__.py  dochelpers.py  qubes_prefs.py  qvm_check.py  qvm_clone.py  qvm_create.py  qvm_device.py  qvm_features.py  qvm_firewall.py  qvm_kill.py  qvm_ls.py  qvm_pause.py  qvm_pool.py  qvm_prefs.py  qvm_remove.py  qvm_run.py  qvm_shutdown.py  qvm_start.py  qvm_start_gui.py  qvm_unpause.py  qvm_volume.py
qubesmgmt/vm/: __init__.py
rpm_spec/: qubes-core-admin-client.spec  qubes-core-admin-client.spec.in  qubes-core-mgmt-client.spec
scripts/: 30-keyboard-layout-service.sh  qubes-gui-session  qubes-guivm-session
test-packages/: .gitignore  dbus.py  qubesdb.py  rpm.py
xsessions/: sys-gui.desktop
