
# Note: we're not using a "standard" pyproject.toml with a [project] section to avoid
# clashing with the old-school setup.py build (for now... hopefully will be upgraded later ?)
[dependency-groups]
current-deps = [  # project dependencies
    "lxml>=6.0.2",
    "python-daemon>=3.1.2",
    "pyxdg>=0.28",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
    "xcffib>=1.12.0",
]
current-dev = [  # dev-depencencies
    "types-lxml>=2026.1.1",
    "pylint>=4.0.4",
    "mock>=5.2.0",
    "docutils>=0.22.4",
    "sphinx>=3.5.3",
    "setuptools>=82.0.0",
    "black>=26.1.0",
    "mypy>=1.19.1",
]
future-dev = [  # those tools are very efficient but not packaged for major distributions yet
    "ruff>=0.15.1",
    "ty>=0.0.16",
]

[tool.ty.rules]

[tool.ruff]
preview = true
line-length = 80

[tool.ruff.lint]
select = ["ANN", "RUF045", # Require type annotations for every function
            "E501"]  # line-too-long
ignore = ["ANN003"]  # type annotation for **kwargs

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true  # do not require __init__ return annotation `->None` if there's at least one typed argument
