[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qubesadmin"
dynamic = ["version"]
authors = [
    {name = "Invisible Things Lab", email = "marmarek@invisiblethingslab.com"}
]
description = "Qubes Admin API package"
license = {text = "LGPL-2.1-only"}
urls = {Homepage = "https://www.qubes-os.org/"}
requires-python = ">=3.10"
dependencies = [
    "lxml>=5.3",
    "pyxdg>=0.27",
    "pyyaml>=6.0",
    "tqdm>=4.67",
    "xcffib>=1.5",
]

[dependency-groups]
build = [
    "build>=1.4.0",
    "wheel>=0.46.3",
]
dev = [
    "types-lxml>=2026.1.1",
    "pylint>=4.0.4",
    "mock>=5.2.0",
    "docutils>=0.22.4",
    "sphinx>=3.5.3",
    "setuptools>=82.0.0",
    "black>=26.1.0",
    "mypy>=1.19.1",
    "python3-xlib>=0.15",
    "rpm>=0.4.0",
]
future-dev = [  # those tools are very efficient but not packaged for major distributions yet
    {include-group = "dev"},
    "ruff>=0.15.1",
    "ty>=0.0.16",
]

[project.scripts]
qubes-prefs = "qubesadmin.tools.qubes_prefs:main"
qvm-backup = "qubesadmin.tools.qvm_backup:main"
qvm-backup-restore = "qubesadmin.tools.qvm_backup_restore:main"
qvm-check = "qubesadmin.tools.qvm_check:main"
qvm-clone = "qubesadmin.tools.qvm_clone:main"
qvm-create = "qubesadmin.tools.qvm_create:main"
qvm-device = "qubesadmin.tools.qvm_device:main"
qvm-features = "qubesadmin.tools.qvm_features:main"
qvm-firewall = "qubesadmin.tools.qvm_firewall:main"
qvm-kill = "qubesadmin.tools.qvm_kill:main"
qvm-ls = "qubesadmin.tools.qvm_ls:main"
qvm-notes = "qubesadmin.tools.qvm_notes:main"
qvm-pause = "qubesadmin.tools.qvm_pause:main"
qvm-pool = "qubesadmin.tools.qvm_pool:main"
qvm-pool-legacy = "qubesadmin.tools.qvm_pool_legacy:main"
qvm-prefs = "qubesadmin.tools.qvm_prefs:main"
qvm-remove = "qubesadmin.tools.qvm_remove:main"
qvm-run = "qubesadmin.tools.qvm_run:main"
qvm-service = "qubesadmin.tools.qvm_service:main"
qvm-shutdown = "qubesadmin.tools.qvm_shutdown:main"
qvm-start = "qubesadmin.tools.qvm_start:main"
qvm-start-daemon = "qubesadmin.tools.qvm_start_daemon:main"
qvm-tags = "qubesadmin.tools.qvm_tags:main"
qvm-template = "qubesadmin.tools.qvm_template:main"
qvm-template-postprocess = "qubesadmin.tools.qvm_template_postprocess:main"
qvm-unpause = "qubesadmin.tools.qvm_unpause:main"
qvm-volume = "qubesadmin.tools.qvm_volume:main"

[tool.setuptools.packages.find]
include = ["qubesadmin*"]

[tool.setuptools.dynamic]
version = {file = "version"}

[tool.setuptools.package-data]
qubesadmin = ["tests/backup/*.xml"]

[tool.ruff]
preview = true
line-length = 80

[tool.ruff.lint]
select = ["ANN", "RUF045", # Require type annotations for every function
            "E501"]  # line-too-long
ignore = ["ANN002", "ANN003"]  # type annotation for **kwargs

[tool.ruff.lint.per-file-ignores]
"qubesadmin/tests/**" = ["ANN"]  # don't force type hints for tests

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true  # do not require __init__ return annotation `->None` if there's at least one typed argument
